--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
     "mysql2": "^3.10.3",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
