--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.6.1",
     "mysql2": "^3.10.3",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
